--- a/src/public/templates/adminconnected.handlebars
+++ b/src/public/templates/adminconnected.handlebars
@@ -1,8 +1,12 @@
 <p>
     bienvenido, admin {{this.username}}
 </p>
-<a href="http://localhost:8080/logout">logout</a>
+<a href="/logout">logout</a>
 <br>
-<a href="http://localhost:8080/profile">ir al perfil</a>
+<a href="/profile">perfil</a>
 <br>
-<a href="http://localhost:8080/products">ir a agregar productos</a>
+<a href="/products/change">ir a agregar productos</a>
+<br>
+<a href="/chat">chat</a>
+<br>
+<a href="/cart">ir al carrito</a>
