--- a/src/public/templates/userconnected.handlebars
+++ b/src/public/templates/userconnected.handlebars
@@ -1,8 +1,10 @@
 <p>
     bienvenido, usuario {{this.username}}
 </p>
-<a href="http://localhost:8080/logout">logout</a>
+<a href="/logout">logout</a>
 <br>
-<a href="http://localhost:8080/profile">ir al perfil</a>
+<a href="/profile">ir al perfil</a>
 <br>
-<a href="http://localhost:8080/cart">ir al carrito</a>
+<a href="/cart">ir al carrito</a>
+<br>
+<a href="/chat">chat</a>
