--- a/src/public/views/productCreator.html
+++ b/src/public/views/productCreator.html
@@ -8,7 +8,7 @@
     <link rel="stylesheet" href="../styles.css">
 </head>
 <body>
-    <a href="http://localhost:8080/">Inicio</a>
+    <a href="/">Inicio</a>
     <section class="productForm">
         <h1>Creador de productos</h1>
         <form action="/productsForm" enctype="multipart/form-data" method="post" class="form_align">
@@ -20,6 +20,8 @@
             <input name="stock">
             <label>Precio</label>
             <input name="price">
+            <label>Categoria</label>
+            <input name="category">
             <br>
             <textarea name="description"cols="20" rows="10" class="description" placeholder="Descripción"></textarea>
             <br>
