--- a/src/public/views/login.html
+++ b/src/public/views/login.html
@@ -4,12 +4,12 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Document</title>
-    <link rel="stylesheet" href="/styles.css">
+    <title>Login</title>
+    <link rel="stylesheet" href="../styles.css">
 </head>
 <body>
     <section>
-        <a href="http://localhost:8080/register">registro</a>
+        <a href="/register">registro</a>
     </section>
 
     <h1>Login de Usuario</h1>
