--- a/src/public/views/register.html
+++ b/src/public/views/register.html
@@ -5,11 +5,11 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Document</title>
-    <link rel="stylesheet" href="/styles.css">
+    <link rel="stylesheet" href="../styles.css">
 </head>
 <body>
     <section>
-        <a href="http://localhost:8080/login">login</a>
+        <a href="/login">login</a>
     </section>
     <section>
         <h2 class="registerTitle">
